log
Wed, Mar 19, 2025  8:43:54 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:00:24 AM: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
       if(elemento=NULL) return EXIT_FAILURE;
       ^~
exercises.c:50:32: error: return makes pointer from integer without a cast [-Werror=int-conversion]
       if(elemento=NULL) return EXIT_FAILURE;
                                ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4f7a293
Wed, Mar 19, 2025  9:01:09 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:33: error: return makes pointer from integer without a cast [-Werror=int-conversion]
       if(elemento==NULL) return EXIT_FAILURE;
                                 ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
03c3a06
Wed, Mar 19, 2025  9:05:16 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:33: error: return makes pointer from integer without a cast [-Werror=int-conversion]
       if(elemento==NULL) return EXIT_FAILURE;
                                 ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ee59de7
Wed, Mar 19, 2025  9:11:08 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:33: error: return makes pointer from integer without a cast [-Werror=int-conversion]
       if(elemento==NULL) return EXIT_FAILURE;
                                 ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1523aa3
Wed, Mar 19, 2025  9:13:53 AM: 
 exercises.c | 11 ++---------
 1 file changed, 2 insertions(+), 9 deletions(-)
 tests:  1|4
total_score: 10/70
f8d9a24
Wed, Mar 19, 2025  9:16:56 AM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|3
total_score: 20/70
c7b8431
Wed, Mar 19, 2025  9:20:39 AM: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
a78940a
Wed, Mar 19, 2025  9:22:02 AM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:22: error: dereferencing 'void *' pointer [-Werror]
       suma += ((int)(*num));
                      ^~~~
exercises.c:67:7: error: invalid use of void expression
       suma += ((int)(*num));
       ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3358718
Wed, Mar 19, 2025  9:23:15 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
2d504a5
